--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,1 +1,49 @@
-body{font-family:Helvetica, sans-serif;width:500px;margin:0 auto}h1,h2{font-weight:bold}h1{text-align:center;font-weight:bold;color:#999}h2{height:36px}input[type="text"]{padding:18px;font-size:1.35em;color:#444;width:462px;border:3px solid #ddd}input[type="submit"]{display:inline-block;padding:50px}footer p{display:inline-block;color:#888}footer #gn-sesh-pts{float:right}#gn-feedback{text-align:center}td{padding:0.4em 3em 0.4em 0}.correct{color:#0a0}.incorrect{color:#f00}
+body {
+  font-family: Helvetica, sans-serif;
+  width: 500px;
+  margin: 0 auto; }
+
+h1, h2 {
+  font-weight: bold; }
+
+h1 {
+  text-align: center;
+  font-weight: bold;
+  color: #999; }
+
+h2 {
+  height: 36px; }
+
+input[type="text"] {
+  padding: 18px;
+  font-size: 1.35em;
+  color: #444;
+  width: 462px;
+  border: 2px solid #eee;
+  box-shadow: 0 0 16px #27c;
+  behavior: url("/js/PIE.htc"); }
+
+input[type="submit"] {
+  display: inline-block;
+  padding: 50px; }
+
+footer p {
+  display: inline-block;
+  color: #888; }
+footer #gn-sesh-pts {
+  float: right; }
+
+#gn-feedback {
+  text-align: center; }
+
+#gn-config {
+  display: none; }
+
+td {
+  padding: 0.4em 3em 0.4em 0; }
+
+.correct {
+  color: #0a0; }
+
+.incorrect {
+  color: #f00; }
