--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,10 @@
 extends layout
 
 block head
-    script(src='//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js')
+    script(src='/js/jquerylocal.js')
     script(src='/js/gn.js')
+    //if lt IE 9
+        script(src='/js/html5shiv-printshiv.js')
 
 block content
     h1= title
@@ -20,5 +22,14 @@ block content
     p#gn-feedback
     
     #gn-config
+        ul
+            li
+                a Types of Questions
+            li
+                a Acids?
+            li
+                a Peroxides?
+            li
+                a Hydrates?
     
     table#gn-report
