--- a/public/style/style.css
+++ b/public/style/style.css
@@ -8,11 +8,16 @@ h1, h2 {
 
 h1 {
   text-align: center;
-  font-weight: bold;
-  color: #999; }
+  color: #aaa;
+  margin-bottom: 44px;
+  font-weight: normal; }
+  h1 span {
+    border-bottom: 3px solid #ddd;
+    padding-bottom: 8px; }
 
 h2 {
-  height: 36px; }
+  height: 36px;
+  font-weight: bold; }
 
 input[type="text"] {
   padding: 18px;
