--- a/public/style/style.scss
+++ b/public/style/style.scss
@@ -15,12 +15,19 @@ h1, h2 {
 
 h1 {
     text-align: center;
-    font-weight: bold;
-    color: #999;
+    color: #aaa;
+    margin-bottom: 44px;
+    font-weight: normal;
+    
+    span {
+        border-bottom: 3px solid #ddd;
+        padding-bottom: 8px;
+    }
 }
 
 h2 {
     height: 36px;
+    font-weight: bold;
 }
 
 input[type="text"] {
