--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,8 @@ block head
         script(src='/js/html5shiv-printshiv.js')
 
 block content
-    h1= title
+    h1
+        span= title
     
     h2#gn-q
     
