Starting work on /about page. Made a friendlier, auto-loading system for the views.

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -3,17 +3,15 @@ body {
   width: 500px;
   margin: 0 auto; }
 
-h1, h2 {
-  font-weight: bold; }
-
 h1 {
   text-align: center;
-  color: #aaa;
-  margin-bottom: 44px;
+  margin-bottom: 55px;
   font-weight: normal; }
-  h1 span {
+  h1 a {
+    color: #aaa;
     border-bottom: 3px solid #ddd;
-    padding-bottom: 8px; }
+    padding-bottom: 8px;
+    text-decoration: none; }
 
 h2 {
   height: 36px;
