--- a/views/index.jade
+++ b/views/index.jade
@@ -6,6 +6,32 @@ block head
 
 block content
     
+    h2#gn-about gnomenclature helps you practice inorganic chemical nomenclature.
+    
+    #gn-config
+        table
+            tr
+                td question type
+                td
+                    a#conf-qmode-ntf names
+                    a#conf-qmode-ftn formulas
+                    a#conf-qmode-mixed mixed
+            tr
+                td acids
+                td
+                    a#conf-acids-on on
+                    a#conf-acids-off off
+            tr
+                td peroxides
+                td
+                    a#conf-peroxides-on on
+                    a#conf-peroxides-off off
+            tr
+                td hydrates
+                td
+                    a#conf-hydrates-on on
+                    a#conf-hydrates-off off
+    
     h2#gn-q
     
     form#gn-form
@@ -17,16 +43,5 @@ block content
         p#gn-sesh-pts
     
     p#gn-feedback
-    
-    #gn-config
-        ul
-            li
-                a Types of Questions
-            li
-                a Acids?
-            li
-                a Peroxides?
-            li
-                a Hydrates?
     
     table#gn-report
