--- a/public/style/style.css
+++ b/public/style/style.css
@@ -3,17 +3,19 @@ body {
   width: 500px;
   margin: 0 auto; }
 
+h1, h2 {
+  font-weight: normal; }
+
 h1 {
   text-align: center;
-  margin-bottom: 55px;
-  font-weight: normal; }
-  h1 a {
-    color: #aaa;
+  margin-bottom: 25px;
+  color: #999; }
+  h1 span {
     border-bottom: 3px solid #ddd;
-    padding-bottom: 8px;
-    text-decoration: none; }
+    padding-bottom: 8px; }
 
-h2 {
+#gn-q {
+  margin-top: 45px;
   height: 36px;
   font-weight: bold; }
 
@@ -39,8 +41,16 @@ footer #gn-sesh-pts {
 #gn-feedback {
   text-align: center; }
 
-#gn-config {
-  display: none; }
+#gn-config td a {
+  background-color: #999;
+  padding: 2px 7px;
+  margin-right: 10px;
+  text-decoration: none;
+  color: #fff; }
+#gn-config td a:hover {
+  cursor: pointer; }
+#gn-config td a.on {
+  background-color: #391; }
 
 td {
   padding: 0.4em 3em 0.4em 0; }
