--- a/public/style/style.css
+++ b/public/style/style.css
@@ -8,15 +8,29 @@ h1, h2 {
 
 h1 {
   text-align: center;
-  margin-bottom: 25px;
-  color: #999; }
+  margin-bottom: 30px;
+  color: #aaa; }
   h1 span {
     border-bottom: 3px solid #ddd;
     padding-bottom: 8px; }
 
+#gn-header h2 {
+  margin: 0; }
+
+#gn-config td {
+  padding: 0.4em 3em 0.4em 0; }
+  #gn-config td a {
+    background-color: #999;
+    padding: 2px 7px;
+    margin-right: 10px;
+    text-decoration: none;
+    color: #fff; }
+  #gn-config td a:hover {
+    cursor: pointer; }
+  #gn-config td a.on {
+    background-color: #391; }
+
 #gn-q {
-  margin-top: 45px;
-  height: 36px;
   font-weight: bold; }
 
 input[type="text"] {
@@ -40,20 +54,6 @@ footer #gn-sesh-pts {
 
 #gn-feedback {
   text-align: center; }
-
-#gn-config td a {
-  background-color: #999;
-  padding: 2px 7px;
-  margin-right: 10px;
-  text-decoration: none;
-  color: #fff; }
-#gn-config td a:hover {
-  cursor: pointer; }
-#gn-config td a.on {
-  background-color: #391; }
-
-td {
-  padding: 0.4em 3em 0.4em 0; }
 
 .correct {
   color: #0a0; }
