--- a/views/index.jade
+++ b/views/index.jade
@@ -6,31 +6,33 @@ block head
 
 block content
     
-    h2#gn-about gnomenclature helps you practice inorganic chemical nomenclature.
-    
-    #gn-config
-        table
-            tr
-                td question type
-                td
-                    a#conf-qmode-ntf names
-                    a#conf-qmode-ftn formulas
-                    a#conf-qmode-mixed mixed
-            tr
-                td acids
-                td
-                    a#conf-acids-on on
-                    a#conf-acids-off off
-            tr
-                td peroxides
-                td
-                    a#conf-peroxides-on on
-                    a#conf-peroxides-off off
-            tr
-                td hydrates
-                td
-                    a#conf-hydrates-on on
-                    a#conf-hydrates-off off
+    #gn-header
+        h2#gn-about gnomenclature helps you practice inorganic chemical nomenclature.
+        
+        #gn-config
+            table
+                tr
+                    td question type
+                    td
+                        a#conf-qmode-ntf names
+                        a#conf-qmode-ftn formulas
+                        a#conf-qmode-mixed mixed
+                tr
+                    td acids
+                    td
+                        a#conf-acids-on on
+                        a#conf-acids-off off
+                tr
+                    td peroxides
+                    td
+                        a#conf-peroxides-on on
+                        a#conf-peroxides-off off
+                tr
+                    td hydrates
+                    td
+                        a#conf-hydrates-on on
+                        a#conf-hydrates-off off
+        
     
     h2#gn-q
     
