--- a/public/style/style.css
+++ b/public/style/style.css
@@ -15,7 +15,7 @@ h1 {
     padding-bottom: 8px; }
 
 #gn-header h2 {
-  margin: 0; }
+  margin-top: 0; }
 
 #gn-config td {
   padding: 0.4em 3em 0.4em 0; }
