Fix bug where multivalent cations were being selected even though the setting was off. Added _.filter on the no-special-settings option that negatively filters the ismultivalent flag.

--- a/views/index.jade
+++ b/views/index.jade
@@ -23,6 +23,11 @@ block content
                         a#conf-acids-on on
                         a#conf-acids-off off
                 tr
+                    td multivalents
+                    td
+                        a#conf-multivalents-on on
+                        a#conf-multivalents-off off
+                tr
                     td peroxides
                     td
                         a#conf-peroxides-on on
