Change multivalent option to support latin-only and iupac-only modes.

--- a/views/index.jade
+++ b/views/index.jade
@@ -25,7 +25,9 @@ block content
                 tr
                     td multivalents
                     td
-                        a#conf-multivalents-on on
+                        a#conf-multivalents-mixed mixed
+                        a#conf-multivalents-latin latin
+                        a#conf-multivalents-iupac iupac
                         a#conf-multivalents-off off
                 tr
                     td peroxides
