--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,7 +10,7 @@ html(lang="en")
         block head
 
     body
-        h1#gn-title
-            span= title
+        h1
+            span#gn-title= title
         
         block content
