--- a/views/index.jade
+++ b/views/index.jade
@@ -48,7 +48,7 @@ block content
     h2#gn-q
     
     form#gn-form
-        input#gn-userinput(type="text", spellcheck="false", autocomplete="off")
+        input#gn-userinput(type="text", spellcheck=false, autocomplete="off", autocapitalize="off", autocorrect="off")
         input#gn-submit(type="submit")
 
     footer#gn-footer
