Add link to github in layout

--- a/views/index.jade
+++ b/views/index.jade
@@ -16,7 +16,7 @@ html(lang="en")
 
         #gn-header
             h2#gn-about gnomenclature helps you practice inorganic chemical nomenclature.
-            p created by <a href="http://bencook.ca">ben cook</a>
+            p <a href="https://github.com/blx/gnomenclature">created</a> by <a href="http://bencook.ca">ben cook</a>
             
             #gn-config
                 table
